[package]
name = "http-proxy"
version = "0.1.0"
authors = ["Michael J. Ryan <tracker1@gmail.com>"]
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.2"
url = "2.1.1"
tokio = { version = "0.2", features = ["full"] }
log = "0.4.8"
env_logger = "0.7.1"
futures = "0.3.1"